test/interaction/Issue2602.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : Set" nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-info-action "*Error*" "Issue2602.agda:6.5-8: error: [UnequalTypes] The types Set₁ and Set are not equal when checking that the expression Set has type Set" nil)
((last . 3) . (agda2-maybe-goto '("Issue2602.agda" . 106)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
